removed unused styles

--- a/css/main.css
+++ b/css/main.css
@@ -120,117 +120,4 @@ body{
 								
 							
 								
-/*
-	Tab Styles
-	
-*/
- #transunionBubble, #equifaxBubble {
-    display: none;
- }
-#creditScoreTabs{
-	background-color:#595758;
-	padding:10px 5px 0 5px;
-	border-top:solid #000 1px;
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,29,29,1)), color-stop(21%,rgba(56,55,55,1)));
-}
-#creditScoreTabs .ui-btn-up-c{
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	border:none;
-	
-}
-#creditScoreTabs .ui-btn-inner{
-	border-top:none;
-}
-#creditScoreTabs li{
-	width:92px;
-	margin-left:5px;
-}															
-#creditScoreTabs .ui-grid-b{
-	width:297px;
-	margin:0 auto -1px auto
-}
-#creditScoreTabs li .ui-btn-up-c{
-	background: #fff;
-}
-/*
-#creditScoreTabs li.on a{
-	background: #fff;
-}
-#creditScoreTabs li.off a{
-	background: #595758;
-	color:#fff;
-	text-shadow: 0px 1px 1px #000;
-	border-top:solid #807e7f 1px;
-}
-*/
-
-#creditScoreTabs li a.ui-btn-hover-c{
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	border:none;
-	color:#fff;
-	background:#4e4d4e !important;
-}
-/*
-#creditScoreTabs li a.ui-btn-hover-c{
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	border:none;
-	text-shadow:none;
-	color:#444;
-}
-*/
-
-
-/*
-#creditScoreTabs li.off a.ui-btn-hover-c{
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	border:none;
-	text-shadow:none;
-}
-*/
-
-
-
-
-
-#creditScoreTabs li a{
-	background-color: #595758 !important;
-	color:#fff;
-	text-shadow: 0px 1px 1px #000;
-	border-top:solid #807e7f 1px !important;
-	font-size:12px !important;
-	font-weight:normal !important;
-}
-
-
-
-
-#creditScoreTabs li a.ui-btn-active{
-	color:#444;
-	text-shadow:none;
-	border:none;
-	background-color: #fff !important;
-	border-top:solid #fff 1px !important;
-	text-shadow: 0px 1px 1px #fff;
-	background: -webkit-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(255,255,255,1) 65%);
-}
-
-
-
-
-
-
-.bBubble{
-	width:268px;
-	margin:0 auto;
-	border-radius:10px;
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 35%,rgba(237,237,237,1) 100%);
-	height:150px;
-	border:solid #eaeaea 1px;
-	padding:10px;
-	-webkit-box-shadow: 0px 1px 0px 0px rgba(150, 150, 150, 0.6);
-}
-
+/
