--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,58 @@
-body{-webkit-text-size-adjust:none;background:#5a5959 url(../images/menuBg.gif) top left repeat-y;}
-.pages h3{margin:0;font-size:20px;}.contentWrap{width:310px;margin:0 auto;padding:15px 5px 0 5px;}
-#menu{width:165px;height:100%;display:block!important;float:left;}#menu h3{font-family:arial;font-size:12px;color:#fff;margin:0;background-color:#5a5959;padding:4px 0 4px 10px;background:-webkit-gradient(linear,left top,left bottom,color-stop(5%,rgba(90,89,89,1)),color-stop(85%,rgba(66,65,65,1)));border-top:solid #6b6b6b 1px;border-bottom:solid #3d3d3d 1px;text-shadow:0 -1px 1px #333;}
-#menu ul{margin:0;padding:0;width:inherit;}#menu ul li{list-style-type:none;margin:0;}
-#menu ul li a:link,#menu ul li a:visited{border-bottom:solid #333 1px;box-shadow:0 1px 0 #727272;color:#fff;font-size:14px;font-family:arial;text-decoration:none;width:165px;display:block;padding:10px 0 10px 10px;text-shadow:0 1px 1px #000;}
-#menu ul li a:hover,#menu ul li a:active{background-color:#716f6f;}.active{background-color:#383737;background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#1e1d1d),color-stop(21%,#383737));}
-.ui-body-c{background-color:#fff;line-height:18px;}.ui-bar-a{background:-webkit-gradient(linear,left top,left bottom,color-stop(1%,rgba(255,255,255,1)),color-stop(100%,rgba(200,200,200,1)));border:none!important;border-bottom:solid #878787 1px!important;color:#000!important;text-shadow:0 1px 1px #fff;height:42px!important;}
-.active{color:#fff;background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(30,29,29,1)),color-stop(21%,rgba(56,55,55,1)));text-shadow:0 1px 1px #000;}
-.ui-btn-corner-all{-webkit-border-radius:0!important;border-radius:0!important;}
+body {
+	-webkit-text-size-adjust: none;
+	background: #5a5959 url(../images/menuBg.gif) top left repeat-y;
+}
+.pages h3 {
+	font-size: 20px;
+	margin: 0;
+}
+#menu {
+	background-color: #5a5959;
+	display: block!important;
+	float: left;
+	height: 100%;
+	width: 165px;
+}
+#menu h3 {
+	font-family: arial;
+	font-size: 12px;
+	color: #fff;
+	margin: 0;
+	padding: 4px 0 4px 10px;
+	background: -webkit-gradient(linear,left top,left bottom,color-stop(5%,rgba(90,89,89,1)),color-stop(85%,rgba(66,65,65,1)));
+	border-top: solid #6b6b6b 1px;
+	border-bottom: solid #3d3d3d 1px;
+	text-shadow: 0 -1px 1px #333;
+}
+
+#menu ul {
+	margin: 0;
+	padding: 0;
+	width: inherit;
+}
+#menu ul li a:link,
+#menu ul li a:visited {
+	border-bottom: solid #333 1px;
+	box-shadow: 0 1px 0 #727272;
+	color: #fff;
+	display: block;
+	font-family: arial;
+	font-size: 14px;
+	padding: 10px 0 10px 10px;
+	text-decoration: none;
+	text-shadow: 0 1px 1px #000;
+	width: 165px;
+}
+#menu ul li a:hover,
+#menu ul li a:active {
+	background-color: #716f6f;
+}
+.ui-body-c {
+	background-color: #fff;
+	line-height: 18px;
+}
+.active {
+	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(30,29,29,1)),color-stop(21%,rgba(56,55,55,1)));
+	color: #fff;
+	text-shadow: 0 1px 1px #000;
+}
